@@ -44,9 +44,9 @@
 \additive \ssemihidden Default Paragraph Font;}{\*
 \ts11\tsrowd\trftsWidthB3\trpaddl108\trpaddr108\trpaddfl3\trpaddft3\trpaddfb3\trpaddfr3\trcbpat1\trcfpat1\tblind0\tblindtype3\tscellwidthfts0\tsvertalt\tsbrdrt\tsbrdrl\tsbrdrb\tsbrdrr\tsbrdrdgl\tsbrdrdgr\tsbrdrh\tsbrdrv \ql \li0\ri0\sa200\sl276\slmult1
 \widctlpar\wrapdefault\aspalpha\aspnum\faauto\adjustright\rin0\lin0\itap0 \rtlch\fcs1 \af0\afs22\alang1025 \ltrch\fcs0 \fs22\lang1033\langfe1033\cgrid\langnp1033\langfenp1033 \snext11 \ssemihidden \sunhideused \sqformat Normal Table;}}
-{\*\rsidtbl \rsid354160\rsid1015571\rsid1385954\rsid1663241\rsid3171022\rsid3754644\rsid3873943\rsid4350429\rsid4681755\rsid6029564\rsid6434632\rsid6777656\rsid7085259\rsid7939751\rsid8467573\rsid8863687\rsid11666420\rsid12468849\rsid13707033\rsid14428074
-\rsid15744301\rsid15941420}{\mmathPr\mmathFont34\mbrkBin0\mbrkBinSub0\msmallFrac0\mdispDef1\mlMargin0\mrMargin0\mdefJc1\mwrapIndent1440\mintLim0\mnaryLim1}{\info{\author Tim Krajcar}{\operator Tim Krajcar}{\creatim\yr2006\mo4\dy11\hr11\min5}
-{\revtim\yr2007\mo4\dy6\hr10\min50}{\version23}{\edmins31}{\nofpages6}{\nofwords1891}{\nofchars10783}{\*\company Concordia University}{\nofcharsws12649}{\vern32859}}{\*\xmlnstbl {\xmlns1 http://schemas.microsoft.com/office/word/2003/wordml}}
+{\*\rsidtbl \rsid354160\rsid1015571\rsid1385954\rsid1663241\rsid3171022\rsid3754644\rsid3873943\rsid4350429\rsid4681755\rsid6029564\rsid6434632\rsid6777656\rsid7085259\rsid7939751\rsid7944019\rsid8467573\rsid8863687\rsid11666420\rsid12468849\rsid13707033
+\rsid14428074\rsid15744301\rsid15941420}{\mmathPr\mmathFont34\mbrkBin0\mbrkBinSub0\msmallFrac0\mdispDef1\mlMargin0\mrMargin0\mdefJc1\mwrapIndent1440\mintLim0\mnaryLim1}{\info{\author Tim Krajcar}{\operator Tim Krajcar}{\creatim\yr2006\mo4\dy11\hr11\min5}
+{\revtim\yr2007\mo4\dy9\hr11\min27}{\version24}{\edmins32}{\nofpages7}{\nofwords1943}{\nofchars11077}{\*\company Concordia University}{\nofcharsws12995}{\vern32859}}{\*\xmlnstbl {\xmlns1 http://schemas.microsoft.com/office/word/2003/wordml}}
 \paperw12240\paperh15840\margl1440\margr1440\margt1440\margb1440\gutter0\ltrsect 
 \widowctrl\ftnbj\aenddoc\trackmoves1\trackformatting1\donotembedsysfont0\relyonvml0\donotembedlingdata1\grfdocevents0\validatexml0\showplaceholdtext0\ignoremixedcontent0\saveinvalidxml0\showxmlerrors0\noxlattoyen
 \expshrtn\noultrlspc\dntblnsbdb\nospaceforul\hyphcaps0\horzdoc\dghspace120\dgvspace120\dghorigin1701\dgvorigin1984\dghshow0\dgvshow3\jcompress\viewkind1\viewscale75\nolnhtadjtbl\rsidroot1385954 \fet0{\*\wgrffmtfilter 2450}\ilfomacatclnup0\ltrpar 
@@ -80,8 +80,21 @@ Scripting engine support added. See a development team member for details at thi
 \par }\pard \ltrpar\ql \li0\ri0\nowidctlpar
 \tx480\tx960\tx1440\tx1920\tx2400\tx2880\tx3360\tx3840\tx4320\tx4800\tx5280\tx5760\tx6240\tx6720\tx7200\tx7680\tx8160\tx8640\tx9120\tx9600\tx10080\tx10560\tx11040\tx11520\tx12000\tx12480\tx12960\tx13440\tx13920\tx14400\tx14880\tx15360\tx15840
 \tx16320\tx16800\tx17280\tx17760\tx18240\tx18720\tx19200\tx19680\tx20160\tx20640\tx21120\tx21600\tx22080\tx22560\tx23040\tx23520\tx24000\tx24480\tx24960\tx25440\tx25920\tx26400\tx26880\tx27360\tx27840\tx28320\tx28800\tx29280\tx29760\tx30240
-\tx30720\wrapdefault\faauto\rin0\lin0\itap0 {\rtlch\fcs1 \af41 \ltrch\fcs0 \f41\insrsid6029564\charrsid8863687    * }{\rtlch\fcs1 \af41 \ltrch\fcs0 \f41\insrsid6029564 Thud can now run 
-its subwindows as dialogs instead of frames, meaning that they won't take up a taskbar entry. This is configurable in Preferences -> Window -> Independent Child Windows.}{\rtlch\fcs1 \af41 \ltrch\fcs0 \f41\insrsid6029564\charrsid6029564 
+\tx30720\wrapdefault\faauto\rin0\lin0\itap0 {\rtlch\fcs1 \af41 \ltrch\fcs0 \f41\insrsid6029564\charrsid8863687    * }{\rtlch\fcs1 \af41 \ltrch\fcs0 \f41\insrsid6029564 
+Thud can now run its subwindows as dialogs instead of frames, meaning that they won't take up a taskbar entry. This is configurable in Preferences -> Window -> Independent Child Windows.
+\par }\pard \ltrpar\ql \li0\ri0\nowidctlpar
+\tx480\tx960\tx1440\tx1920\tx2400\tx2880\tx3360\tx3840\tx4320\tx4800\tx5280\tx5760\tx6240\tx6720\tx7200\tx7680\tx8160\tx8640\tx9120\tx9600\tx10080\tx10560\tx11040\tx11520\tx12000\tx12480\tx12960\tx13440\tx13920\tx14400\tx14880\tx15360\tx15840
+\tx16320\tx16800\tx17280\tx17760\tx18240\tx18720\tx19200\tx19680\tx20160\tx20640\tx21120\tx21600\tx22080\tx22560\tx23040\tx23520\tx24000\tx24480\tx24960\tx25440\tx25920\tx26400\tx26880\tx27360\tx27840\tx28320\tx28800\tx29280\tx29760\tx30240
+\tx30720\wrapdefault\faauto\rin0\lin0\itap0\pararsid7944019 {\rtlch\fcs1 \af41 \ltrch\fcs0 \f41\insrsid7944019\charrsid8863687    * }{\rtlch\fcs1 \af41 \ltrch\fcs0 \f41\insrsid7944019 
+Thud now handles command history like most modern clients, allowing you to move forward and backward through command history using Ctrl-N and Ctrl-P. The shortcut for 'Update Tactical Map Now' has been changed to Ctrl-Shift-N.
+\par }{\rtlch\fcs1 \ai\af41 \ltrch\fcs0 \i\f41\insrsid7944019 
+\par }{\rtlch\fcs1 \ai\af41 \ltrch\fcs0 \i\f41\insrsid7944019\charrsid1385954   Bug Fixes:}{\rtlch\fcs1 \ai\af41 \ltrch\fcs0 \i\f41\insrsid7944019 
+\par }{\rtlch\fcs1 \af41 \ltrch\fcs0 \f41\insrsid7944019\charrsid8863687    * }{\rtlch\fcs1 \af41 \ltrch\fcs0 \f41\insrsid7944019 ANSI emulation has been improved.
+\par }{\rtlch\fcs1 \af41 \ltrch\fcs0 \f41\insrsid7944019\charrsid8863687    * }{\rtlch\fcs1 \af41 \ltrch\fcs0 \f41\insrsid7944019 Some bugs in command history handling have been fixed.
+\par }\pard \ltrpar\ql \li0\ri0\nowidctlpar
+\tx480\tx960\tx1440\tx1920\tx2400\tx2880\tx3360\tx3840\tx4320\tx4800\tx5280\tx5760\tx6240\tx6720\tx7200\tx7680\tx8160\tx8640\tx9120\tx9600\tx10080\tx10560\tx11040\tx11520\tx12000\tx12480\tx12960\tx13440\tx13920\tx14400\tx14880\tx15360\tx15840
+\tx16320\tx16800\tx17280\tx17760\tx18240\tx18720\tx19200\tx19680\tx20160\tx20640\tx21120\tx21600\tx22080\tx22560\tx23040\tx23520\tx24000\tx24480\tx24960\tx25440\tx25920\tx26400\tx26880\tx27360\tx27840\tx28320\tx28800\tx29280\tx29760\tx30240
+\tx30720\wrapdefault\faauto\rin0\lin0\itap0 {\rtlch\fcs1 \af41 \ltrch\fcs0 \f41\insrsid7944019\charrsid6029564 
 \par }{\rtlch\fcs1 \ab\af41 \ltrch\fcs0 \b\f41\insrsid6029564 
 \par }\pard \ltrpar\ql \li0\ri0\nowidctlpar
 \tx480\tx960\tx1440\tx1920\tx2400\tx2880\tx3360\tx3840\tx4320\tx4800\tx5280\tx5760\tx6240\tx6720\tx7200\tx7680\tx8160\tx8640\tx9120\tx9600\tx10080\tx10560\tx11040\tx11520\tx12000\tx12480\tx12960\tx13440\tx13920\tx14400\tx14880\tx15360\tx15840
@@ -97,9 +110,8 @@ its subwindows as dialogs instead of frames, meaning that they won't take up a t
 \tx480\tx960\tx1440\tx1920\tx2400\tx2880\tx3360\tx3840\tx4320\tx4800\tx5280\tx5760\tx6240\tx6720\tx7200\tx7680\tx8160\tx8640\tx9120\tx9600\tx10080\tx10560\tx11040\tx11520\tx12000\tx12480\tx12960\tx13440\tx13920\tx14400\tx14880\tx15360\tx15840
 \tx16320\tx16800\tx17280\tx17760\tx18240\tx18720\tx19200\tx19680\tx20160\tx20640\tx21120\tx21600\tx22080\tx22560\tx23040\tx23520\tx24000\tx24480\tx24960\tx25440\tx25920\tx26400\tx26880\tx27360\tx27840\tx28320\tx28800\tx29280\tx29760\tx30240
 \tx30720\wrapdefault\faauto\rin0\lin0\itap0\pararsid11666420 {\rtlch\fcs1 \af41 \ltrch\fcs0 \f41\insrsid11666420    * Thud now has an icon}{\rtlch\fcs1 \af41 \ltrch\fcs0 \f41\insrsid6777656 !}{\rtlch\fcs1 \af41 \ltrch\fcs0 \f41\insrsid11666420 
-\par    * }{\rtlch\fcs1 \af41 \ltrch\fcs0 \f41\insrsid3873943 
-Keybindings have been implemented, mirroring XpertMUD's keys for users' convenience. The number pad is bound to headings, F1-F3 fires tics, shift-F1-F3 lists tics, ctrl-number keys sights weapons, alt-number keys fires weapons, ctrl-numpad targets bod
-y parts, alt-numpad-7/8/9 rotates torso.}{\rtlch\fcs1 \af41 \ltrch\fcs0 \f41\insrsid11666420 
+\par    * }{\rtlch\fcs1 \af41 \ltrch\fcs0 \f41\insrsid3873943 Keybindings have been implemented, mirroring XpertMUD's keys for users' convenience. The number pad is bound to headings, F1-F3 fires tic
+s, shift-F1-F3 lists tics, ctrl-number keys sights weapons, alt-number keys fires weapons, ctrl-numpad targets body parts, alt-numpad-7/8/9 rotates torso.}{\rtlch\fcs1 \af41 \ltrch\fcs0 \f41\insrsid11666420 
 \par }\pard \ltrpar\ql \li0\ri0\nowidctlpar
 \tx480\tx960\tx1440\tx1920\tx2400\tx2880\tx3360\tx3840\tx4320\tx4800\tx5280\tx5760\tx6240\tx6720\tx7200\tx7680\tx8160\tx8640\tx9120\tx9600\tx10080\tx10560\tx11040\tx11520\tx12000\tx12480\tx12960\tx13440\tx13920\tx14400\tx14880\tx15360\tx15840
 \tx16320\tx16800\tx17280\tx17760\tx18240\tx18720\tx19200\tx19680\tx20160\tx20640\tx21120\tx21600\tx22080\tx22560\tx23040\tx23520\tx24000\tx24480\tx24960\tx25440\tx25920\tx26400\tx26880\tx27360\tx27840\tx28320\tx28800\tx29280\tx29760\tx30240
@@ -148,8 +160,8 @@ January 22, 2007}{\rtlch\fcs1 \ab\af41 \ltrch\fcs0 \b\f41\insrsid1385954\charrsi
 \par }\pard \ltrpar\ql \li0\ri0\nowidctlpar
 \tx480\tx960\tx1440\tx1920\tx2400\tx2880\tx3360\tx3840\tx4320\tx4800\tx5280\tx5760\tx6240\tx6720\tx7200\tx7680\tx8160\tx8640\tx9120\tx9600\tx10080\tx10560\tx11040\tx11520\tx12000\tx12480\tx12960\tx13440\tx13920\tx14400\tx14880\tx15360\tx15840
 \tx16320\tx16800\tx17280\tx17760\tx18240\tx18720\tx19200\tx19680\tx20160\tx20640\tx21120\tx21600\tx22080\tx22560\tx23040\tx23520\tx24000\tx24480\tx24960\tx25440\tx25920\tx26400\tx26880\tx27360\tx27840\tx28320\tx28800\tx29280\tx29760\tx30240
-\tx30720\wrapdefault\faauto\rin0\lin0\itap0\pararsid354160 {\rtlch\fcs1 \af41 \ltrch\fcs0 \f41\insrsid354160\charrsid1385954    * }{\rtlch\fcs1 \af41 \ltrch\fcs0 \f41\insrsid354160 
-Page up/down, home, and end keys now function when focus is in input field.
+\tx30720\wrapdefault\faauto\rin0\lin0\itap0\pararsid354160 {\rtlch\fcs1 \af41 \ltrch\fcs0 \f41\insrsid354160\charrsid1385954    * }{\rtlch\fcs1 \af41 \ltrch\fcs0 \f41\insrsid354160 Page up/down, home, and end keys now function w
+hen focus is in input field.
 \par }\pard \ltrpar\ql \li0\ri0\nowidctlpar
 \tx480\tx960\tx1440\tx1920\tx2400\tx2880\tx3360\tx3840\tx4320\tx4800\tx5280\tx5760\tx6240\tx6720\tx7200\tx7680\tx8160\tx8640\tx9120\tx9600\tx10080\tx10560\tx11040\tx11520\tx12000\tx12480\tx12960\tx13440\tx13920\tx14400\tx14880\tx15360\tx15840
 \tx16320\tx16800\tx17280\tx17760\tx18240\tx18720\tx19200\tx19680\tx20160\tx20640\tx21120\tx21600\tx22080\tx22560\tx23040\tx23520\tx24000\tx24480\tx24960\tx25440\tx25920\tx26400\tx26880\tx27360\tx27840\tx28320\tx28800\tx29280\tx29760\tx30240
@@ -169,9 +181,8 @@ Clicking in the text window or on the tactical map returns the key focus to the 
 \par   }{\rtlch\fcs1 \ai\af40 \ltrch\fcs0 \i\f40\insrsid1385954 New Features:
 \par    }{\rtlch\fcs1 \af4 \ltrch\fcs0 \f4\insrsid1385954 * A new \lquote status\rquote  report window. Displays hex, heading, speed, heat, status (destroyed/fallen/etc) and weapon/ammo information 
 \par    * Armor/internal diagrams can be superimposed on tactical map. Must be activated under \lquote Map\rquote  menu [based on patch by Peitao Ting]
-\par    * Support for loading/saving maps. From the File menu, if you select \lquote Load Map\rquote 
-, Thud will attempt to load terrain information from that file. Thud will also automatically update that file every 5 minutes with new map information. If your unit changes maps, that is detected and auto-saving is stopped (so as not to overwrite \'93good
-\'94 (RS) map information with \'93bad\'94 (hangar) map information).
+\par    * Support for loading/saving maps. From the File menu, if you select \lquote Load Map\rquote , Thud will attempt to load terrain information from that file. Thud will also automatically update that file every 5 minutes with new m
+ap information. If your unit changes maps, that is detected and auto-saving is stopped (so as not to overwrite \'93good\'94 (RS) map information with \'93bad\'94 (hangar) map information).
 \par    * Thud now automatically detects when you enter/exit mechs and suspends/resumes operation accordingly. The \lquote Start/Stop HUD\rquote  button (Ctrl-G) still works \endash 
  Thud will not automatically activate if the HUD has been stopped by a user (or not started yet)
 \par    * Cliff detection is now done per-vehicle type \endash  if you\rquote re in a vehicle, the cliff lines will change (automatically) to show on 2 z difference instead of 3.
@@ -237,8 +248,9 @@ Clicking in the text window or on the tactical map returns the key focus to the 
 \par   * A preference to adjust the length of heading/speed indicator lines on contacts on the map. The lower the number, the longer the line.
 \par   * A preference to limit the amount of lines in the scrollback. Keeping this number lower reduces memory usage and speeds up Thud.
 \par   * A new menu with 3 menu items to control the speed of updates that Thud sends. Keep it on Slow to reduce bandwidth usage, crank it to Fast when bad guys show up.
-\par   * Thud now has an option to keep 'old' data instead of overwriting it with 'unknown.' If it 'Erase Unknown Terrain'
- is set, Thud will overwrite any old terrain and turn it to a black hex if it gets a '?' for it now. This mostly happens underground. If you want to keep a 'backlog' of terrain underground, uncheck this option.
+\par   * Thud now has an option to keep 'old' data instead of overwriting it with 
+'unknown.' If it 'Erase Unknown Terrain' is set, Thud will overwrite any old terrain and turn it to a black hex if it gets a '?' for it now. This mostly happens underground. If you want to keep a 'backlog' of terrain underground, uncheck this option.
+
 \par   * Thud keeps 'expired' contacts around 3 times longer now. 
 \par   * Thud no longer colors destroyed contacts grey, leaving that color soley for expired contacts. In addition, enemy destroyed contacts will not be displayed in bold any longer. Destroyed contacts are still styled strike-through however.
 \par   
@@ -433,8 +445,8 @@ fffffffffffffffffdfffffffeffffffffffffffffffffffffffffffffffffffffffffffffffffff
 ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
 ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
 ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
-ffffffffffffffffffffffffffffffff52006f006f007400200045006e00740072007900000000000000000000000000000000000000000000000000000000000000000000000000000000000000000016000500ffffffffffffffffffffffffec69d9888b8b3d4c859eaf6cd158be0f000000000000000000000000f0d7
-faff7378c701feffffff00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ffffffffffffffffffffffff00000000000000000000000000000000000000000000000000000000
+ffffffffffffffffffffffffffffffff52006f006f007400200045006e00740072007900000000000000000000000000000000000000000000000000000000000000000000000000000000000000000016000500ffffffffffffffffffffffffec69d9888b8b3d4c859eaf6cd158be0f000000000000000000000000e01b
+89b7d47ac701feffffff00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ffffffffffffffffffffffff00000000000000000000000000000000000000000000000000000000
 00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ffffffffffffffffffffffff0000000000000000000000000000000000000000000000000000
 000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ffffffffffffffffffffffff000000000000000000000000000000000000000000000000
 0000000000000000000000000000000000000000000000000105000000000000}}
